--- a/CSS/footer.css
+++ b/CSS/footer.css
@@ -1,9 +1,20 @@
 footer{
-    height: 600px;
+    height: 350px;
+    background-color: gray;
+    position: relative;
 }
 
 .rowf{
     box-sizing: border-box;
+}
+
+footer ul{
+    display: inline-grid;
+    text-align: left;
+}
+
+footer li{
+    color: white;
 }
 
 footer  li{
@@ -12,7 +23,7 @@ footer  li{
 
 .columnf{
     float: left;
-    width: 20%;
+    width: 15%;
     padding-left:100px;
     margin-top: 10px;
     padding-top: 70px;
@@ -25,24 +36,53 @@ footer  li{
     clear: both;
 }
 
+.title{
+    font-size: 30px;
+}
+
+.dfoot{
+    font-family: 'Times New Roman', Times, serif;
+    height: 65px;
+    text-align: center;
+    padding-top: 30px;
+    background-color: #808285;
+    color: white;
+}
+
 @media screen and (max-width: 992px) {
-    .rowf{
+    footer{
         height: 100%;
-        text-align: center;
-       
+        
     }
-    .columnf {
-      width: 50%;
-    }
+  .rowf{
+      height: 100%;
+      text-align: center;
+      padding: 0%;
+  }
+  .columnf {
+    width: 100%;
+    padding: 0%;
+  }
+  .dfoot{
+      height: 100%;
+  }
   }
 
   @media screen and (max-width: 600px) {
+      footer{
+          height: 100%;
+          
+      }
     .rowf{
         height: 100%;
         text-align: center;
-        width: 100px;
+        padding: 0%;
     }
     .columnf {
       width: 100%;
+      padding: 0%;
+    }
+    .dfoot{
+        height: 100%;
     }
   }
