--- a/CSS/services.css
+++ b/CSS/services.css
@@ -1,6 +1,12 @@
+.serv{
+  text-align: center;
+  font-size: 85px;
+}
+
 .row{
     height: 300px;
     box-sizing: border-box;
+    border-bottom: 5px solid black;
 }
 
 .column{
@@ -10,6 +16,7 @@
     margin-top: 10px;
     padding-top: 70px;
     text-align: center;
+    
 }
 
 h6{
@@ -18,6 +25,7 @@ h6{
     font-weight: 600;
     line-height: 40px;
     font-size: 15px;
+    
 }
 
 .row::after{
@@ -27,6 +35,7 @@ h6{
 }
 
 @media screen and (max-width: 992px) {
+  .serv{font-size: 45px;}
     .row{
         height: 100%;
         text-align: center;
@@ -38,6 +47,7 @@ h6{
   }
 
   @media screen and (max-width: 600px) {
+    .serv{font-size: 30px;}
     .row{
         height: 100%;
         text-align: center;
