--- a/CSS/contact.css
+++ b/CSS/contact.css
@@ -1,6 +1,16 @@
+/*.contact{
+    width: 20px;
+    height: auto;
+}*/
+
 .contact h5{
-    font-size: 65px;
+    font-size: 85px;
     text-align: center;
+}
+
+.map{
+    width: 100%;
+    height: 400px;
 }
 
 .container-contact{
