--- a/CSS/footer.css
+++ b/CSS/footer.css
@@ -1,6 +1,6 @@
 footer{
     height: 350px;
-    background-color: gray;
+    background-color: black;
     position: relative;
 }
 
@@ -14,20 +14,24 @@ footer ul{
 }
 
 footer li{
+    margin: 5px;
     color: white;
-}
-
-footer  li{
     list-style: none;
 }
 
 .columnf{
     float: left;
-    width: 15%;
+    width: 20%;
     padding-left:100px;
     margin-top: 10px;
     padding-top: 70px;
-    text-align: center;
+    text-align: left;
+    font-size: 20px;
+}
+
+.columnf a{
+    text-decoration: none;
+    color: white;
 }
 
 .rowf::after{
@@ -36,8 +40,13 @@ footer  li{
     clear: both;
 }
 
+#location, #mphone, #phone, #mailicon{
+    width: 15px;
+    height: auto;
+}
+
 .title{
-    font-size: 30px;
+    font-size: 40px;
 }
 
 .dfoot{
@@ -45,7 +54,12 @@ footer  li{
     height: 65px;
     text-align: center;
     padding-top: 30px;
-    background-color: #808285;
+    background-color: black;
+    color: white;
+}
+
+.dfoot a{
+    text-decoration: none;
     color: white;
 }
 
