--- a/CSS/fpic.css
+++ b/CSS/fpic.css
@@ -4,15 +4,15 @@
     height: auto;
 }
 
-.fpic, .btn{
+.fpic{
     position: relative;
     display: inline-block;
 }
 
-.abouttext, .btn{
+.abouttext{
     position: absolute;
     top: 45%;
-    left: 20%;
+    left: 50%;
     transform: translate( -50%, -50% );
     text-align: center;
     color: #B1560F;
@@ -21,83 +21,35 @@
     font-family: Jura;
 }
 
-.btn{
-    top: 60%;
-    left: 12%;
-    cursor: pointer;
-    border: none;
-    color:  black;
-    padding: 14px 40px;
-    background-color: none;
-    border: 2px solid black;
-    text-align: center;
-    text-decoration: none;
-    display: inline-block;
-    font-size: 35px;
-    border-radius: 12px;
-}
-
-.btn:hover{
-    color: white;
-    background-color: black;
-}
-
 @media screen and (max-width: 1024px){
-    
-    .abouttext, .btn{
+    #mek{
+        width: 500px;
+        height: auto;
+    }
+    .abouttext{
         position: absolute;
-        top: 45%;
-        left: 15%;
         text-align: center;
         color: black;
         font-weight: bold;
         font-size: 24px;
         font-family: Jura;
     }
-        .btn{
-            top: 55%;
-            left: 10%;
-            cursor: pointer;
-            border: none;
-            color:  black;
-            padding: 2px 10px;
-            background-color: none;
-            border: 2px solid black;
-            text-align: center;
-            text-decoration: none;
-            display: inline-block;
-            font-size: 16px;
-            border-radius: 4px;
-        }
     }
 
 
 @media screen and (max-width: 600px){
-    
-.abouttext, .btn{
+    #mek{
+        width: 200px;
+        height: auto;
+    }
+.abouttext{
     position: absolute;
-    top: 45%;
-    left: 15%;
     text-align: center;
     color: #CD7F32;
     font-weight: bold;
     font-size: 12px;
     font-family: Jura;
 }
-    .btn{
-        top: 55%;
-        left: 10%;
-        cursor: pointer;
-        border: none;
-        color:  black;
-        padding: 2px 10px;
-        background-color: none;
-        border: 2px solid black;
-        text-align: center;
-        text-decoration: none;
-        display: inline-block;
-        font-size: 8px;
-        border-radius: 4px;
-    }
+
 }
 
