--- a/CSS/gallery.css
+++ b/CSS/gallery.css
@@ -7,7 +7,7 @@
 	display: flex;	
 	flex-wrap: wrap;
 	justify-content: center;
-	background-color: gray;
+	background-color: #f2f2f2;
 }
 
 .imgcontainer > img{
