--- a/CSS/pricelist.css
+++ b/CSS/pricelist.css
@@ -1,13 +1,52 @@
+/* Style the tab */
+.tab {
+  overflow: hidden;
+  border: 1px solid #ccc;
+  background-color: #f2f2f2;
+  padding-left: 41%;
+}
+
+/* Style the buttons inside the tab */
+.tab button {
+  background-color: inherit;
+  float: left;
+  border: none;
+  outline: none;
+  cursor: pointer;
+  padding: 14px 16px;
+  transition: 0.3s;
+  font-size: 17px;
+}
+
+/* Change background color of buttons on hover */
+.tab button:hover {
+  background-color: #ddd;
+}
+
+/* Create an active/current tablink class */
+.tab button.active {
+  background-color: #ccc;
+}
+
+/* Style the tab content */
+.productList {
+  display: none;
+  padding: 6px 12px;
+  border: 1px solid #ccc;
+  border-top: none;
+  width: 700px;
+  font-size: 25px;
+  color: #cd7f32;
+  margin-right: 50%;
+  padding-left: 28%;
+  background-color: #f2f2f2;
+}
+
 .pricelist{
     text-align: center;
     font-size: 65px;
   }
 
-  .productList {
-    width: 700px;
-    font-size: 25px;
-    color: rgb(209, 73, 73);
-}
 .product {
   border-bottom: 1px dashed #aaa;
 }
@@ -19,17 +58,18 @@
 }
 
   @media screen and (max-width:1024px){
-    .pricelist{font-size: 45px;}
+    .pricelist{font-size: 65px;}
     .productList{
-      width:200px;
-      font-size: 10px;
+      width:50%;
+      font-size: 35px;
     }
   }
 
   @media screen and (max-width:600px){
+    .tab{padding-left: 50px;}
     .pricelist{font-size: 30px;}
     .productList{
       width:200px;
-      font-size: 10px;
+      font-size: 15px;
     }
   }
