--- a/css/style.css
+++ b/css/style.css
@@ -21,7 +21,7 @@ body {
 .header {
   height: 100vh;
   position: relative;
-  background-image: url(../images/cover.jpg);
+  background-image: url(../images/cover.JPG);
   background-size: cover;
   display: flex;
   justify-content: space-between;
